k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pymetrics
  labels:
    name: pymetrics
    app: pymetrics
    environment: production
